--- a/style.css
+++ b/style.css
@@ -200,6 +200,17 @@ hr {
     max-width: 250px;
 }
 
+#certificates {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+#certificates li {
+    padding: 0.6em 0em;
+}
+
 @media screen and (max-width: 600px) {
 
     #photo {
